# py-conject

./: .gitignore  README.md  pyproject.toml
.github/workflows/: upload-to-pypi.yml
conject/: __init__.py  _container.py  _container_config.py  _ctx_mgr.py  _dep_spec.py  _expressions.py  _impl.py  _types.py  _utils.py  _validation.py  utils.py
tests/: test_conject.py
